--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
     "multiline-ternary": "off",
     "@typescript-eslint/no-misused-promises": "off",
     "@typescript-eslint/no-confusing-void-expression": "off",
-    "@typescript-eslint/no-floating-promises" : "off"
+    "@typescript-eslint/no-floating-promises" : "off",
+    "react-hooks/exhaustive-deps": "off"
   }
 }
