Refactor ESLint configuration to ignore UI components and prepare for production

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,5 +27,6 @@
     "@typescript-eslint/no-floating-promises": "off",
     "react-hooks/exhaustive-deps": "off",
     "@typescript-eslint/non-nullable-type-assertion-style": "off"
-  }
+  },
+  "ignorePatterns": ["src/app/components/ui/*.tsx"]
 }
